# mc-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
core/: minecraft.py  screen.py  utils.py
tests/: test_utils.py
